@@ -1,3 +1,5 @@
+* Fix bug where scoresheets wouldn't print due to incorrect error
+     checking
 * 164 - Add report for winners of the playoff brackets
 * 177 - Give a more reasonable error message when an XML document fails to parse
 * 188 - Display a reasonable error message to the user when no score sheets are selected to print
